WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225926
Layer names should not contain object addresses in release builds
https://bugs.webkit.org/show_bug.cgi?id=225926
Summary
Layer names should not contain object addresses in release builds
Simon Fraser (smfr)
Reported
2021-05-18 11:00:50 PDT
Object addresses should not show in layer names in release, to reduce string churn, and to avoid giving away memory address locations.
Attachments
Patch
(8.86 KB, patch)
2021-05-18 14:09 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-05-18 14:09:34 PDT
Created
attachment 428978
[details]
Patch
Geoffrey Garen
Comment 2
2021-05-18 14:15:48 PDT
Comment on
attachment 428978
[details]
Patch r=me
EWS
Comment 3
2021-05-18 16:55:16 PDT
Committed
r277692
(
237886@main
): <
https://commits.webkit.org/237886@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428978
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-05-18 16:56:25 PDT
<
rdar://problem/78180136
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug