Source/WebCore/dom/Text.cpp
@@ -223,13 +223,9 @@ void Text::updateRendererAfterContentChange(unsigned offsetOfReplacedData, unsig
     document().updateTextRenderer(*this, offsetOfReplacedData, lengthOfReplacedData);
 }
 
-String Text::debugDescription() const
+static void appendTextRepresentation(StringBuilder& builder, const Text& text)
 {
-    StringBuilder builder;
-
-    builder.append(CharacterData::debugDescription());
-
-    String value = data();
+    String value = text.data();
     builder.append(" length="_s, value.length());
 
     value.replaceWithLiteral('\\', "\\\\");
@@ -242,6 +238,24 @@ String Text::debugDescription() const
     }
 
     builder.append(" \"", value, '\"');
+}
+
+String Text::description() const
+{
+    StringBuilder builder;
+
+    builder.append(CharacterData::description());
+    appendTextRepresentation(builder, *this);
+
+    return builder.toString();
+}
+
+String Text::debugDescription() const
+{
+    StringBuilder builder;
+
+    builder.append(CharacterData::debugDescription());
+    appendTextRepresentation(builder, *this);
 
     return builder.toString();
 }
